# social-bot

./: README.md
backend/: .env  .gitignore  pyproject.toml
backend/app/: init_data.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: chat.py  setting.py
backend/app/core/: AI.py  RedBook.py  SSE.py  test_RedBook.py
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: AIDialogue.tsx  KeywordManagement.tsx  Layout.tsx  RedBookLogin.tsx  Timer.tsx
frontend/src/components/dialogue/: InputArea.tsx  MessageItem.tsx  MessageList.tsx  SessionHeader.tsx  SessionSelector.tsx
frontend/src/context/: KeywordContext.tsx  SettingContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Analysis.tsx  Index.tsx  NotFound.tsx  Platform.tsx
frontend/src/types/: index.ts
